added sizes to tailwind config, added all pages/routes, added routing to each page, created navbar,  editded global css, started main text slide in for land in page

--- a/globals.css
+++ b/globals.css
@@ -2,3 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+
+*{
+    margin: 0;
+    padding: 0;
+    /* background-color: gray; */
+}
+
+@keyframes slideInLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+  .slideIn {
+    animation: 1s ease-out 0s 1 slideInLeft;
+  }
