--- a/globals.css
+++ b/globals.css
@@ -5,8 +5,26 @@
 *{
     margin: 0;
     padding: 0;
+
     /* background-color: gray; */
 }
+
+/* Hide the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+    display: none;
+  }
+  
+  /* Set the scrollbar track color */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
+  /* Set the scrollbar width to zero */
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+  
 
 @keyframes slideInLeft {
     0% {
@@ -22,5 +40,99 @@
   }
 
 .parallax {
-    height: 100px;
+    height: 275px;
+}
+
+body{
+    background-color: #232323;
+}
+
+h1, h2, h3, h4, h5, h6{
+    color: #d6d6d6;
+    font-family: 'Poppins', sans-serif;
+}
+
+.LContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  width: 45%;
+}
+
+  .image-stack {
+    position: relative;
+    height: 0;
+    width: 100%;
+  }
+  
+  .image-stack img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation-name: stack;
+    animation-timing-function: ease-out;
+
+  }
+  
+  @keyframes stack {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+
+    }
+  }
+
+  @keyframes unstack {
+    from {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    to {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+  }
+  
+  
+  .image-stack img:nth-child(1) {
+    z-index: 4;
+    animation-duration: 1s; /* slowest */
+    height: 400px;
+  }
+  
+  .image-stack img:nth-child(2) {
+    z-index: 3;
+    top: 40px;
+    animation-duration: 0.8s; /* slower */
+    height: 400px;
+  }
+  
+  .image-stack img:nth-child(3) {
+    z-index: 2;
+    top: 80px;
+    animation-duration: 0.6s; /* faster */
+    height: 400px;
+  }
+  
+  .image-stack img:nth-child(4) {
+    z-index: 1;
+    top: 120px;
+    animation-duration: 0.4s; /* fastest */
+    height: 400px;
+  }
+  
+  .image-stack {
+  position: relative;
+  height: 0;
+  width: 100%;
+}
+
+.image-stack.stacked img {
+  position: relative;
+  animation-name: stack;
+  animation-timing-function: ease-in;
+  animation-duration: 0.5s;
 }
