--- a/globals.css
+++ b/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
 * {
   margin: 0;
@@ -43,7 +44,8 @@
 }
 
 body {
-  background: #2f2f2f;
+  background-color: #fcf5e5;
+  background-image: -webkit-linear-gradient(25deg, #fcf5e5 50%, #27213C 50%);
 }
 
 .logo {
@@ -67,10 +69,10 @@ h4,
 h5,
 h6 {
   color: #d6d6d6;
-  font-family: "Poppins", sans-serif;
+  color: black;
 }
 
-.LContainer {
+.homepage__div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -160,8 +162,6 @@ h6 {
   font-size: 2em;
 }
 
-
-
 /* .circle-1, .circle-2, .circle-3, .circle-4, .circle-5,
 .circle-6, .circle-7, .circle-8, .circle-9,.circle-10 {
 
@@ -189,7 +189,6 @@ h6 {
 .circle-1, .circle-11, .circle-21, .circle-31, .circle-41 {
   padding-top:px;
 } */
-
 
 .circle:hover {
   z-index: 1;
